--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,6 +34,10 @@ a {
     cursor: pointer;
 }
 
+a:hover {
+    color: #24C6EA !important;
+}
+
 .leftMenuBar {
     background-color: #e5e5e5;
     width: 100px;
@@ -82,8 +86,8 @@ a {
 }
 
 main {
-    margin-left: 220px;
-    margin-right: 220px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .intro {
@@ -133,40 +137,100 @@ main {
 .text-2-2 {
     color: #f2f2f2;
     font-family: Source Code Pro;
-    font-size: 20px;
-    padding: 100px;
+    font-size: 18px;
+    padding: 50px;
     padding-top: 0;
 }
 
 .skills-board {
     padding: 50px;
     background-color: #303030;
+    height: 70vh;
 }
 
 .skills-btn {
     width: 100%;
-    height: 100%;
+    height: 80%;
     background-color: #303030;
     color: #f2f2f2;
     text-align: left;
     font-family: Poppins;
     font-size: 20px;
+    border: 2px solid #c4c4c4;
 }
 
 .skills-btn:hover {
-    box-shadow: inset 0 0 0 3px #f2f2f2;
+    box-shadow: inset 0 0 0 2px #f2f2f2;
 }
 
 .skills-btn:focus {
-    box-shadow: inset 0 0 0 3px #f2f2f2;
+    box-shadow: inset 0 0 0 2px #f2f2f2;
 }
 
 .skills-btn:active {
-    box-shadow: inset 0 0 0 3px #f2f2f2;
+    box-shadow: inset 0 0 0 2px #f2f2f2;
 }
 
 .skills-logo {
     height: 40px;
     width: 40px;
     padding-left: 10px;
+    margin-left: 20px;
+}
+
+.skills-logo-2 {
+    height: 36px;
+    width: 36px;
+    padding-left: 10px;
+}
+
+.card-body {
+    background-color: #707070 !important;
+    width: 100% !important;
+    display: flex !important;
+}
+
+.project-img {
+	margin-bottom: 30px;
+	padding-left: 15px;
+    padding-right: 15px;
+}
+
+.scrollToTop {
+	position: fixed;
+    bottom: 4%;
+    right: 2%;
+    z-index: 99;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background: none;
+    display: block;
+    opacity: 0;
+    transform: translateY(100px);
+    transition: all .4s ease;
+}
+
+.upBtn {
+	height: 50px;
+	width: 50px;
+}
+
+.showBtn {
+	opacity: 1;
+	transform: translateY(0);
+}
+
+
+
+@media only screen and (min-width: 768px) {
+    main {
+        margin-left: 220px;
+        margin-right: 220px;
+    }
+    .text-2-2 {
+        padding: 100px;
+        padding-top: 0;
+        font-size: 20px;
+    }
 }
