--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -145,7 +145,7 @@ main {
 .skills-board {
     padding: 50px;
     background-color: #303030;
-    height: 70vh;
+    height: 400px;
 }
 
 .skills-btn {
@@ -183,14 +183,18 @@ main {
 }
 
 .skills-logo-2 {
-    height: 36px;
-    width: 36px;
-    padding-left: 10px;
+    height: 40px;
+    width: 40px;
+    padding-left: 0;
 }
 
-.card-body {
+/* .card-body {
     background-color: #707070 !important;
     width: 100% !important;
+    display: flex !important;
+} */
+
+.modal-body {
     display: flex !important;
 }
 
@@ -240,6 +244,11 @@ main {
     .skills-logo {
         padding-left: 10px;
         margin-left: 20px;
+    }
+    .skills-logo-2 {
+        height: 48px;
+        width: 48px;
+        padding-left: 10px;
     }
     .skills-btn {
         font-size: 20px;
