--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -148,6 +148,18 @@ main {
     height: 400px;
 }
 
+.coding-2 {
+    display: none;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.design-2 {
+    display: none;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
 .skills-btn {
     width: 100%;
     height: 80%;
@@ -172,8 +184,8 @@ main {
 }
 
 .skills-logo {
-    height: 40px;
-    width: 40px;
+    height: 38px;
+    width: 38px;
     padding-left: 10px;
     margin-left: 0;
 }
@@ -183,16 +195,10 @@ main {
 }
 
 .skills-logo-2 {
-    height: 40px;
-    width: 40px;
-    padding-left: 0;
+    height: 34px;
+    width: 34px;
+    padding: 2px;
 }
-
-/* .card-body {
-    background-color: #707070 !important;
-    width: 100% !important;
-    display: flex !important;
-} */
 
 .modal-body {
     display: flex !important;
@@ -229,6 +235,10 @@ main {
 	transform: translateY(0);
 }
 
+footer {
+    background-color: #303030;
+    color: #f2f2f2;
+}
 
 
 @media only screen and (min-width: 768px) {
@@ -242,12 +252,15 @@ main {
         font-size: 20px;
     }
     .skills-logo {
+        height: 44px;
+        width: 44px;
         padding-left: 10px;
         margin-left: 20px;
     }
     .skills-logo-2 {
-        height: 48px;
-        width: 48px;
+        height: 40px;
+        width: 40px;
+        padding: 0;
         padding-left: 10px;
     }
     .skills-btn {
