--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -73,7 +73,7 @@ a:hover {
 }
 
 .active {
-    text-decoration: underline;
+    text-decoration: underline !important;
 }
 
 .right-link {
@@ -91,7 +91,7 @@ main {
 }
 
 .intro {
-    padding-top: 160px;
+    padding-top: 100px;
     padding-bottom: 160px;
 }
 
@@ -138,8 +138,9 @@ main {
     color: #f2f2f2;
     font-family: Source Code Pro;
     font-size: 18px;
-    padding: 10px;
-    padding-top: 0;
+    padding: 0;
+    padding-top: 20px;
+    padding-bottom: 50px;
 }
 
 .skills-board {
@@ -240,11 +241,82 @@ footer {
     color: #f2f2f2;
 }
 
+.logo-title {
+    font-family: Norwester;
+    font-size: 24px;
+    color: #f2f2f2;
+    padding-left: 10px;
+}
 
-@media only screen and (min-width: 768px) {
+.navbar {
+    background-color: #303030;
+}
+
+.navbar-toggler,
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+    outline: none;
+    border: none;
+    box-shadow: none;
+}
+
+.overlay {
+    height: 0%;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.9);
+    overflow-y: hidden;
+    transition: 0.5s;
+}
+  
+.overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 22px;
+    font-family: Source Code Pro;
+    color: #f2f2f2;
+    display: block;
+    transition: 0.3s;
+}
+
+.overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 40px;
+}
+
+@media screen and (max-height: 450px) {
+    .overlay {overflow-y: auto;}
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+        font-size: 40px;
+        top: 15px;
+        right: 35px;
+    }
+}
+
+
+@media only screen and (min-width: 992px) {
     main {
         margin-left: 220px;
         margin-right: 220px;
+    }
+    .intro {
+        padding-top: 160px;
     }
     .text-2-2 {
         padding: 100px;
