--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,6 +18,17 @@
     src: url("../fonts/Poppins/Poppins-Regular.ttf") format("truetype");
 }
 
+@media
+    only screen and (-webkit-min-device-pixel-ratio: 1.5),
+    only screen and (-o-min-device-pixel-ratio: 3/2),
+    only screen and (min--moz-device-pixel-ratio: 1.5),
+    only screen and (min-device-pixel-ratio: 1.5){
+    html, body {
+        width: 100%;
+        overflow-x: hidden;
+    }
+}
+
 * {
 	box-sizing: border-box;
 	margin: 0;
